# anyparse

./: 404.html  LICENSE.md  NOTICE  README.md  README_zh.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: mkdocs.yml
anyparse/: __init__.py  __main__.py  __version__.py  parser.py  settings.py
anyparse/anyocr/: __init__.py  default_config.yaml  parser.py
anyparse/anyocr/models/: calboxes.py  clsmodel.py  detmodel.py  engine.py  loadImage.py  ocrbase.py  ocrvllm.py  params.py  recmodel.py  utils.py
anyparse/apis/: app.py
anyparse/apis/hooks/: depends.py  handlers.py
anyparse/apis/schemas/: openai.py  responses.py
anyparse/apis/views/: base.py  contexts.py  openai_routers.py  parser_routers.py
anyparse/callbacks/: __init__.py  base.py  parsecallback.py
anyparse/clis/: __init__.py  base.py  main.py
anyparse/constructs/: anyfiled.py  callback.py  detector.py  document.py  pdfclassify.py
anyparse/converters/: html_converter.py  office_converter.py  pdf_converter.py  text_converter.py
anyparse/engines/asr/: __init__.py  base.py  clients.py
anyparse/engines/ocr/: __init__.py  (+3 more)
anyparse/exceptions/: __init__.py  base.py  errors.py
anyparse/loaders/: __init__.py  audio_loders.py  image_loders.py
anyparse/loggers/: __init__.py  logurus.py
anyparse/parsers/: __init__.py  base.py  clients.py  csv.py  email.py  epub.py  html.py  ipynb.py  mkd.py  pdf.py  text.py
anyparse/pipelines/: __init__.py  base.py  pipeline.py
anyparse/schemas/: __init__.py  base.py  configs.py  detectors.py  documents.py
anyparse/utils/: downloads.py  healths.py  import_utils.py  pdfcls.py  utils.py
config/: anyocr.yaml  config.env  config.yaml
docs/: README.md  requirements.txt
docs/en/: index.md
docs/zh/: index.md
faq/: index.html
quick_start/: index.html
reference/: index.html
reference/changelog/: index.html
search/: search_index.json
skills/anyparse-skill/: SKILL.md  SKILL_zh.md
supports/commercial/: index.html
supports/sponsors/: index.html
usage/: index.html
usage/apis/: index.html
usage/cli_tools/: index.html
usage/model_source/: index.html
usage/python/: index.html
usage/skills/: index.html
zh/: index.html
zh/faq/: index.html
zh/quick_start/: index.html
zh/reference/: index.html
zh/usage/: index.html
(+75 files in other folders)
